--- a/Indichi/public/Menu_Desserts.html
+++ b/Indichi/public/Menu_Desserts.html
@@ -7,8 +7,9 @@
     <!--<script src="javascripts/angular.min.js"></script>-->
     <script src="javascripts/angular-resource.min.js"></script>
     <script src="javascripts/angular-route.min.js"></script>
-    <script src="javascripts/Menu_angular.js"></script>
-    <title>DESSERTS</title>
+    <script src="javascripts/angular-local-storage.js"></script>
+    <script src="javascripts/Cart_Angular.js"></script>
+        <title>DESSERTS</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/submenu.css">
     <script src="javascripts/jquery-3.2.1.min.js"></script>
     <script src="javascripts/submenu.js"></script>
@@ -26,8 +27,8 @@
     <div id="menu">
         <div class="category">DESSERTS</div>
         <div class="line"></div>
-        <div class="box" ng-app="Menu" ng-controller="dessertsController">
-            <div class="item" ng-repeat="items in FoodTypes">
+        <div class="box" ng-app="orders" ng-controller="shoppingcart">
+            <div class="item" ng-repeat="items in dessertsFoodTypes">
                 <div class="image" style="background-image:url('{{items.imagepath}}');"></div>
                 <div class="title">{{items.name}}</div>
                 <div class="discription">{{items.description}}</div>
@@ -36,7 +37,7 @@
                 <table>
                     <tr class="count">
                         <td><input class="textBox" value="{{items.quantity}}"/></td>
-                        <td><input class="select" type="button" value="ADD INTO CART" onclick="addToCart()"/></td>
+                        <td><input class="select" type="button" value="ADD INTO CART" ng-click="addToCart(items)"/></td>
                     </tr>
                 </table>
             </div>
