--- a/Indichi/public/Menu_Drinks.html
+++ b/Indichi/public/Menu_Drinks.html
@@ -7,7 +7,7 @@
     <!--<script src="javascripts/angular.min.js"></script>-->
     <script src="javascripts/angular-resource.min.js"></script>
     <script src="javascripts/angular-route.min.js"></script>
-    <script src="javascripts/Menu_angular.js"></script>
+    <script src="javascripts/Cart_Angular.js"></script>
     <title>DRINKS</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/submenu.css">
 </head>
@@ -25,8 +25,8 @@
     <div id="menu">
         <div class="category">DRINKS</div>
         <div class="line"></div>
-        <div class="box" ng-app="Menu" ng-controller="drinksController">
-            <div class="item" ng-repeat="items in FoodTypes">
+        <div class="box" ng-app="orders" ng-controller="shoppingcart">
+            <div class="item" ng-repeat="items in drinksFoodTypes">
                 <div class="image" style="background-image:url('{{items.imagepath}}');"></div>
                 <div class="title">{{items.name}}</div>
                 <div class="discription">{{items.description}}</div>
@@ -35,7 +35,7 @@
                 <table>
                     <tr class="count">
                         <td><input class="textBox" value="{{items.quantity}}" /></td>
-                        <td><input class="select" type="button" value="ADD INTO CART" onclick="addToCart()" /></td>
+                        <td><input class="select" type="button" value="ADD INTO CART" ng-click="addToCart(items)" /></td>
                     </tr>
                 </table>
             </div>
