--- a/Indichi/public/Menu_Entrees.html
+++ b/Indichi/public/Menu_Entrees.html
@@ -17,6 +17,7 @@
      <div id="logo">
             <div class="homepage_menu"><a href="index.html">HOME</a></div>
             <div class="homepage_menu"><a href="MainMenu.html">MENU</a></div>
+         <div class="homepage_menu"><a href="Order.html">Cart</a></div>
             <div class="homepage_menu"><a href="AboutUS.html">ABOUT US</div>
             <div class="homepage_menu">
                 <a href="login.html"><input class="button" type="button" value="ORDER ONLINE"></a></div>
