--- a/Indichi/public/Menu_Appetizer.html
+++ b/Indichi/public/Menu_Appetizer.html
@@ -20,6 +20,7 @@
     <div id="logo">
         <div class="homepage_menu"><a href="index.html">HOME</a></div>
         <div class="homepage_menu"><a href="MainMenu.html">MENU</a></div>
+        <div class="homepage_menu"><a href="Order.html">Cart</a></div>
         <div class="homepage_menu"><a href="AboutUS.html">ABOUT US</div>
         <div class="homepage_menu">
             <a href="login.html"><input class="button" type="button" value="ORDER ONLINE"></a>
@@ -45,7 +46,7 @@
                 </table>
 
             </div>
-            <button ng-click="checkOut()">Checkout</button>
+            
         </div>
     </div>
 
