--- a/Indichi/public/Menu_Drinks.html
+++ b/Indichi/public/Menu_Drinks.html
@@ -7,6 +7,7 @@
     <!--<script src="javascripts/angular.min.js"></script>-->
     <script src="javascripts/angular-resource.min.js"></script>
     <script src="javascripts/angular-route.min.js"></script>
+    <script src="javascripts/angular-local-storage.js"></script>
     <script src="javascripts/Cart_Angular.js"></script>
     <title>DRINKS</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/submenu.css">
@@ -16,6 +17,7 @@
      <div id="logo">
             <div class="homepage_menu"><a href="index.html">HOME</a></div>
             <div class="homepage_menu"><a href="MainMenu.html">MENU</a></div>
+         <div class="homepage_menu"><a href="Order.html">Cart</a></div>
             <div class="homepage_menu"><a href="AboutUS.html">ABOUT US</div>
             <div class="homepage_menu">
                 <a href="login.html"><input class="button" type="button" value="ORDER ONLINE"></a></div>
