Changes to css stylesheets to inlude Cart link

--- a/Indichi/public/AboutUS.html
+++ b/Indichi/public/AboutUS.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <title>INDICHI</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/AboutUS.css">
+																		  
     <script src="javascripts/jquery-3.2.1.min.js"></script>
     <script src="javascripts/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/AboutUS.css">
 </head>
     <body>
           <div id="logo">
             <div class="homepage_menu"><a href="index.html">HOME</a></div>
             <div class="homepage_menu"><a href="MainMenu.html">MENU</a></div>
-            <div class="homepage_menu"><a href="javascript:void(0)">ABOUT US</div>
+              <div class="homepage_menu"><a href="Order.html">Cart</a></div>
+            <div class="homepage_menu"><a href="javascript:void(0)">ABOUT US</a></div>
             <div class="homepage_menu">
                 <a href="login.html"><input class="button" type="button" value="ORDER ONLINE"></a></div>
     </div>
