--- a/Indichi/public/Menu_Entrees.html
+++ b/Indichi/public/Menu_Entrees.html
@@ -18,7 +18,7 @@
             <div class="homepage_menu"><a href="index.html">HOME</a></div>
             <div class="homepage_menu"><a href="MainMenu.html">MENU</a></div>
          <div class="homepage_menu"><a href="Order.html">Cart</a></div>
-            <div class="homepage_menu"><a href="AboutUS.html">ABOUT US</div>
+            <div class="homepage_menu"><a href="AboutUS.html">ABOUT US</a></div>
             <div class="homepage_menu">
                 <a href="login.html"><input class="button" type="button" value="ORDER ONLINE"></a></div>
     </div>
@@ -36,7 +36,7 @@
                 <div class="dotted_line">........................................................</div>
                 <table>
                     <tr class="count">
-                        <td><input class="textBox" value="{{items.quantity}}" /></td>
+                        <td><input class="textBox" ng-model="{{items.quantity}}" /></td>
                         <td><input class="select" type="button" value="ADD INTO CART" ng-click="addToCart(items)" /></td>
                     </tr>
                 </table>
