--- a/Indichi/public/index.html
+++ b/Indichi/public/index.html
@@ -20,8 +20,8 @@
                     </ul>
                     </div>
             </div>
-            <div class="homepage_menu"><a href="Order.html">Cart</div>
-            <div class="homepage_menu"><a href="AboutUS.html">ABOUT US</div>
+            <div class="homepage_menu"><a href="Order.html">Cart</a></div>
+            <div class="homepage_menu"><a href="AboutUS.html">ABOUT US</a></div>
             <div class="homepage_menu">
                 <a href="login.html"><input class="button" type="button" value="ORDER ONLINE"></a>
             </div>
