Added total in cart and disabled checkout after the first submission

--- a/Indichi/public/Menu_Appetizer.html
+++ b/Indichi/public/Menu_Appetizer.html
@@ -40,8 +40,8 @@
 
                 <table>
                     <tr class="count">
-                        <td><input class="textBox" value="{{items.quantity}}" /></td>
-                        <td><input class="select" type="button" value="ADD INTO CART" ng-click="addToCart(items)" /></td>
+                        <td><input class="textBox" ng-model="items.quantity" /></td>
+                        <td><input class="select" type="button" value="ADD INTO CART" ng-click="addToCart(items, itemQuantity)" /></td>
                     </tr>
                 </table>
 
