--- a/Indichi/public/Menu_Desserts.html
+++ b/Indichi/public/Menu_Desserts.html
@@ -37,7 +37,7 @@
                 <div class="dotted_line">...........................................</div>
                 <table>
                     <tr class="count">
-                        <td><input class="textBox" value="{{items.quantity}}"/></td>
+                        <td><input type="text" ng-model="items.quantity"/></td>
                         <td><input class="select" type="button" value="ADD INTO CART" ng-click="addToCart(items)"/></td>
                     </tr>
                 </table>
